# MRReP_Web

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
Temp/: TEST_STEPS.md
assets/: CONVERSATION.md
docs/: AGENTS_CN.md  INTEGRATION_PLAN.md  README_CN.md
ros1_bridge/: CMakeLists.txt  package.xml
ros1_bridge/launch/: web_bridge.launch
ros1_bridge/scripts/: hrp_planner_node.py  hrz_costmap_node.py
src/: App.tsx  ErrorBoundary.tsx  r3f.d.ts
src/components/editor/: HRPEditor3D.tsx  HRZEditor3D.tsx  HRZPolygon.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/ros/: ROSConnection.tsx
src/components/scene/: CameraControls.tsx  MapEditPreview.tsx  MapFloor.tsx  NavPathVisual.tsx  RobotModel.tsx  Scene3D.tsx
src/components/ui/: ActionPanel.tsx  ModeSelector.tsx
src/ros/: connection.ts  mock.ts  types.ts
src/stores/: hrpStore.ts  hrzStore.ts  mapEditorStore.ts  mapStore.ts  navTargetStore.ts  robotPoseStore.ts  rosStore.ts
src/utils/: coordinate.ts  mapRenderer.ts  persistence.ts
